fix:自定义简历，增加编辑功能

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,7 +33,7 @@ a,
     place-items: center;
   }
 
-  #app {
+  .layout_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
