--- a/src/styles/edit.scss
+++ b/src/styles/edit.scss
@@ -7,7 +7,15 @@ body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   letter-spacing: 0.01071em;
   font-size: 14px;
+
 }
+//禁止用户在整个页面中选择文本
+//body {
+//  -webkit-user-select: none;
+//  -moz-user-select: none;
+//  -ms-user-select: none;
+//  user-select: none;
+//}
 .paper {
   position: relative;
   margin: 0px auto 20px auto;
@@ -18,8 +26,21 @@ body {
   border-radius: 3px;
   padding: 60px;
   margin-top: 120px;
-  margin-bottom: 10px;
+  margin-bottom: 100px;
   background-image: linear-gradient(0deg, #fff, #f9fbff);
+}
+.decollator{
+
+  &:after{
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: #d2d2d2;
+    left: 0;
+    top: 1298.89px;
+  }
 }
 .jianlibase {
   position: fixed;
@@ -55,8 +76,8 @@ body {
   position: absolute;
   left: 0px;
   top: 0px;
-  //width: 100%;
-  width: 122px;
+  width: 100%;
+  //width: 122px;
   height: auto;
   border: none;
   padding-right: 2px;
@@ -168,7 +189,7 @@ div:-webkit-autofill, input:-webkit-autofill, p:-webkit-autofill, h3:-webkit-aut
   transition: background-color 50000s ease-in-out 0s;
   -webkit-text-fill-color: unset;
 }
-.jianli-title a:-webkit-autofill {
+.jianli-title .title:-webkit-autofill {
   background: transparent;
   transition: background-color 50000s ease-in-out 0s;
   -webkit-text-fill-color: unset;
@@ -305,13 +326,13 @@ div:-webkit-autofill, input:-webkit-autofill, p:-webkit-autofill, h3:-webkit-aut
   border-bottom: 1px dashed #d2d2d2;
   margin-bottom: 10px;
 }
-.jianli-title a {
+.jianli-title .title {
   font-family: -apple-system-font, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Hiragino Sans GB, Microsoft YaHei UI, Microsoft YaHei, Arial, sans-serif;
   padding-right: 0px;
   color: #4b5767;
   font-weight: 700;
   margin-left: 2px;
-  -webkit-user-modify: read-write-plaintext-only;
+  //-webkit-user-modify: read-write-plaintext-only;
   padding-bottom: 6px;
   /*border-bottom: 2px solid #71859d;*/
 }
@@ -368,9 +389,9 @@ div:-webkit-autofill, input:-webkit-autofill, p:-webkit-autofill, h3:-webkit-aut
 .companyJobDesc {
   color: #303030;
   font-size: 15px;
-  -webkit-user-modify: read-write-plaintext-only;
+  //-webkit-user-modify: read-write-plaintext-only;
 }
-#tech, .summary, #extend {
+.tech, .summary, #extend {
   position: relative;
   height: auto;
   text-align: left;
@@ -380,8 +401,7 @@ div:-webkit-autofill, input:-webkit-autofill, p:-webkit-autofill, h3:-webkit-aut
   font-size: 15px;
   letter-spacing: 0.7px;
   color: black;
-  -webkit-user-modify: read-write;
-  /*-webkit-user-modify: read-write-plaintext-only;*/
+  //-webkit-user-modify: read-write;
 }
 .delete-item, .delete-jingyan-item {
   position: absolute;
@@ -485,6 +505,7 @@ b.bold{
   color: #666;
   margin-top: 5px;
   white-space: nowrap;
+  font-weight: bold;
   //float: left;
 }
 .jingyan-content {
@@ -827,7 +848,7 @@ b.bold{
   width: 100%;
   height: auto;
 }
-#jingyans ul li, #tech ul li, .summary ul li, #extend ul li {
+#jingyans ul li, .tech ul li, .summary ul li, #extend ul li {
   list-style-type: disc;
   padding-left: 5px;
   margin-left: 0px;
