--- a/src/styles/edit.scss
+++ b/src/styles/edit.scss
@@ -30,10 +30,9 @@ body {
   background-image: linear-gradient(0deg, #fff, #f9fbff);
 }
 .decollator{
-
   &:after{
     content: "";
-    display: block;
+    display: none;
     position: absolute;
     width: 100%;
     height: 1px;
@@ -466,8 +465,9 @@ b.bold{
   margin-bottom: 5px;
 }
 .jingyan-header {
-  height: 40px;
-  line-height: 40px;
+  //height: 40px;
+  //line-height: 40px;
+  padding-bottom: 6px;
   border-bottom: 1px dashed whitesmoke;
   display: flex;
   justify-content: space-between;
