--- a/src/styles/rem.scss
+++ b/src/styles/rem.scss
@@ -23,6 +23,9 @@
       }
     }
   }
+  .paper{
+    width: 100% !important;
+  }
 }
 @media screen and (max-width: 768px) {
   header{
@@ -48,5 +51,13 @@
         margin-top: 0;
       }
     }
+  }
+  .paper{
+    width: 100% !important;
+  }
+}
+@media screen and (max-width: 691px) {
+  .paper{
+    width: 628px !important;
   }
 }
