--- a/src/styles/edit.scss
+++ b/src/styles/edit.scss
@@ -3,7 +3,7 @@
   margin: 0px;
 }
 body {
-  background-image: linear-gradient(to right, #d9dde1, #d2e3f5);
+  //background-image: linear-gradient(to right, #d9dde1, #d2e3f5);
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   letter-spacing: 0.01071em;
   font-size: 14px;
