--- a/src/styles/rem.scss
+++ b/src/styles/rem.scss
@@ -58,6 +58,7 @@
 }
 @media screen and (max-width: 691px) {
   .paper{
-    width: 628px !important;
+    //width: 628px !important;
+    width: 100% !important;
   }
 }
