--- a/src/styles/basic.scss
+++ b/src/styles/basic.scss
@@ -4,3 +4,21 @@ i{
   background-position: center;
   background-repeat: no-repeat;
 }
+#app {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1280px;
+  //padding: 2rem;
+  font-weight: normal;
+}
+
+a,
+.green {
+  text-decoration: none;
+  /*color: hsla(160, 100%, 37%, 1);*/
+  color: #2365c4;
+  transition: 0.4s;
+  padding: 3px;
+
+}
+
