--- a/src/styles/rem.scss
+++ b/src/styles/rem.scss
@@ -1,30 +1,81 @@
-@media screen and (max-width: 1024px){
-  header{
-    padding-right: 0 !important;
-    .logo{
-      margin: 0 auto 0rem !important;
-      width: 5rem !important;
-      height: 5rem !important;
-      transition: all .3s;
-    }
-    .wrapper{
-      .greetings {
-        h1 {
-          font-size: 2rem;
-          transition: all .3s;
-        }
-        h3{
-          font-size: 1rem;
-          transition: all .3s;
-        }
-      }
-      nav{
-        margin-top: 0;
-      }
-    }
+@media (hover: hover) {
+  a:hover {
+    background-color: hsla(160, 100%, 37%, 0.2);
   }
+}
+
+@media (min-width: 1024px) {
+  body {
+    display: flex;
+    place-items: center;
+  }
+
+  .layout_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 2rem;
+    transition: all .3s;
+
+  }
+  .active_con#app{
+    grid-template-columns: 0.3fr 1fr;
+    max-width: 100%;
+  }
+
+}
+
+
+@media screen and (max-width: 1024px){
+  //header{
+  //  padding-right: 0 !important;
+  //  .logo{
+  //    margin: 0 auto 0rem !important;
+  //    width: 5rem !important;
+  //    height: 5rem !important;
+  //    transition: all .3s;
+  //  }
+  //  .wrapper{
+  //    .greetings {
+  //      h1 {
+  //        font-size: 2rem;
+  //        transition: all .3s;
+  //      }
+  //      h3{
+  //        font-size: 1rem;
+  //        transition: all .3s;
+  //      }
+  //    }
+  //    nav{
+  //      margin-top: 0;
+  //    }
+  //  }
+  //}
   .paper{
     width: 100% !important;
+  }
+  .active_con {
+    header{
+      padding-right: 0 !important;
+      .logo{
+        margin: 0 auto 0rem !important;
+        width: 5rem !important;
+        height: 5rem !important;
+        transition: all .3s;
+      }
+      .wrapper{
+        .greetings {
+          h1 {
+            font-size: 2rem;
+            transition: all .3s;
+          }
+          h3{
+            font-size: 1rem;
+            transition: all .3s;
+          }
+        }
+      }
+    }
+
   }
 }
 @media screen and (max-width: 768px) {
