--- a/src/styles/basic.scss
+++ b/src/styles/basic.scss
@@ -7,9 +7,11 @@ i{
 #app {
   margin: 0 auto;
   width: 100%;
-  max-width: 1280px;
+  //max-width: 1280px;
   //padding: 2rem;
   font-weight: normal;
+  height: 100vh;
+  display: flex;
 }
 
 a,
